--- a/.github/workflows/test_python.yml
+++ b/.github/workflows/test_python.yml
@@ -139,7 +139,7 @@ jobs:
       - name: Install scipy for example experiment
         run: python -m pip install scipy
       - name: Run example experiment
-        run: python build/python/example/example_experiment_complete.py
+        run: python build/python/example/example_experiment_complete.py 1
 
   merge-python-wheels:
     runs-on: ubuntu-latest
